# starbear

./: .buildinfo  .gitignore  .readthedocs.yaml  README.md  genindex.html  index.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js  tutorial.html
.doctrees/: environment.pickle  index.doctree  intro.doctree  tutorial.doctree
.github/workflows/: publish.yml  python-package.yml
_sources/: intro.rst.txt
docs/: conf.py  index.rst  intro.rst  tutorial.rst
spacebear/: base-lib.js  base-template.html  page.py  repr.py  serve.py  utils.py
src/starbear/: __init__.py  __main__.py  common.py  config.py  repr.py  serve.py  utils.py
src/starbear/assets/: bearlib.js
src/starbear/components/: __init__.py  editor.js  editor.py
src/starbear/core/: app.py  live.py  page.py  reg.py  repr.py  serve.py  utils.py
src/starbear/server/: __init__.py  config.py  find.py  index.py  misc.py  reload.py  serve.py
src/starbear/server/plugins/: api_tokens.py  oauth.py  permissions.py  sentry.py  session.py
src/starbear/stream/: functions.py  live.py
src/starbear/templates/: bearlib-template.html  index-style.css  index-template.html  page-template.html
starbear/: __init__.py  bare-template.html  base-lib.js  base-template.html  bearlib-template.html  bearlib.js  bearstyle.css  constructors.py  page-template.html  page.py  ref.py  repr.py  serve.py  template.py  templating.py  utils.py  wrap.py
tests/: conftest.py  test_templating.py
tests/apps/: conftest.py  test_errors.py  test_feedback_queue.py  test_form.py  test_live.py  test_operations.py  test_references.py  test_resources.py  test_simple.py  test_static_body.py  test_static_json.py  utils.py
tests/apps/common_assets/: complex-counter.js  counter.js  fancy-counter.js
tests/apps/test_operations_assets/: template.html
tests/apps/test_resources_assets/: stylish.css  stylo.css  template.html
tests/components/: test_editor.py
tests/core/: test_templating.py
tests/server/: conftest.py  test_find.py  test_hello.py  test_reload.py  utils.py
tests/server/app_hello/: hello.py
tests/server/app_hello/world/: jupiter.py  mars.py  venus.py
