[project]
name = "starbear"
version = "0.1.7"
description = "Framework for easy small local web apps or programs"
authors = [
    { name = "Olivier Breuleux", email = "breuleux@gmail.com" }
]
dependencies = [
    "uvicorn>=0.30.3",
    "starlette>=0.38.1",
    "websockets>=12.0",
    "hrepr~=0.7.0",
    "lxml>=5.2.2",
    "gifnoc>=0.3.4",
    "pyyaml>=6.0.1",
]
readme = "README.md"
requires-python = ">= 3.9"
license = "MIT"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-playwright>=0.5.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/starbear"]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
combine-as-imports = true
