[project]
name = "starbear"
version = "0.2.10"
description = "Framework for easy small local web apps or programs"
authors = [
    { name = "Olivier Breuleux", email = "breuleux@gmail.com" }
]
dependencies = [
    "starlette>=0.38.1",
    "websockets>=12.0",
    "hrepr~=0.9.1",
    "gifnoc~=0.6.2",
    "lxml>=5.2.2",
    "pyyaml>=6.0.1",
    "ovld~=0.5.13",
]
readme = "README.md"
requires-python = ">= 3.11"
license = "MIT"

[project.urls]
Homepage = "https://starbear.readthedocs.io/en/latest/"
Documentation = "https://starbear.readthedocs.io/en/latest/"
Repository = "https://github.com/breuleux/starbear"

[project.scripts]
starbear = "starbear.__main__:main"

[dependency-groups]
dev = [
    "playwright==1.52.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-playwright>=0.5.1",
    "pytest-timeout>=2.4.0",
    "sphinx<8",
    "sphinx-rtd-theme>=2.0.0",
]

[project.optional-dependencies]
server = [
    "jurigged~=0.6.0",
    "uvicorn>=0.30.3",
    "authlib>=1.3.1",
    "httpx>=0.27.0",
    "itsdangerous>=2.2.0",
    "sse-starlette>=2.1.2,<3.0.0",
    "watchdog>=4.0.1",
]

[tool.uv]
override-dependencies = ["ovld~=0.5.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/starbear"]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
combine-as-imports = true
